cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
set(PCL_DIR ${PCL_ROOT}/cmake/PCLConfig.cmake)
set(VTK_DIR ${PCL_ROOT}/3rdParty/VTK/lib/cmake/vtk-6.1/cmake/PCLConfig.cmake)
find_package(PCL 1.7 REQUIRED COMPONENTS common io visualization)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_kinect2 pcl_kinect2.cpp)
target_link_libraries(pcl_kinect2 ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})